Test/errors/err_variadic_not_last.cb
expect_error("Only the last type parameter may be a pack") {
    struct Bad<T..., U> { int x = 0; }
}
